Added nette/utils package

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"issues": "https://github.com/Kappa-org/VisualPaginator/issues"
 	},
 	"require": {
-		"nette/application": "2.2.*"
+		"nette/application": "2.2.*",
+		"nette/utils": "2.2.*"
 	},
 	"require-dev": {
 		"kappa/tester": "1.1.*"
